--- a/genie-main/configs/cgenie.eb_go_gs_ac_bg_sg_rg.worlg4.BASESFeTDTLSipreform.config
+++ b/genie-main/configs/cgenie.eb_go_gs_ac_bg_sg_rg.worlg4.BASESFeTDTLSipreform.config
@@ -53,7 +53,7 @@ rg_topo="worlg4.k1"
 # TRACER CONFIGURATION
 # *******************************************************************
 # Set number of tracers
-GOLDSTEINNTRACSOPTS='$(DEFINE)GOLDSTEINNTRACS=19'
+GOLDSTEINNTRACSOPTS='$(DEFINE)GOLDSTEINNTRACS=29'
 # Select tracers
 gm_atm_select_3=.true.
 gm_atm_select_4=.true.
@@ -70,12 +70,22 @@ gm_ocn_select_15=.true.
 gm_ocn_select_16=.true.
 gm_ocn_select_20=.true.
 gm_ocn_select_22=.true.
-gm_ocn_select_90=.true.
 gm_ocn_select_42=.true.
 gm_ocn_select_35=.true.
 gm_ocn_select_38=.true.
 gm_ocn_select_40=.true.
+gm_ocn_select_48=.true.
+gm_ocn_select_49=.true.
 gm_ocn_select_50=.true.
+gm_ocn_select_57=.true.
+gm_ocn_select_58=.true.
+gm_ocn_select_59=.true.
+gm_ocn_select_60=.true.
+gm_ocn_select_61=.true.
+gm_ocn_select_62=.true.
+gm_ocn_select_63=.true.
+gm_ocn_select_64=.true.
+gm_ocn_select_90=.true.
 gm_sed_select_3=.true.
 gm_sed_select_4=.true.
 gm_sed_select_8=.true.
@@ -113,7 +123,17 @@ bg_ocn_init_42=1.000E-09
 bg_ocn_init_35=1.025E-02
 bg_ocn_init_38=2.916E-02
 bg_ocn_init_40=0.0
+bg_ocn_init_48=0
+bg_ocn_init_49=0
 bg_ocn_init_50=5.282E-02
+bg_ocn_init_57=0
+bg_ocn_init_58=0
+bg_ocn_init_59=0
+bg_ocn_init_60=0
+bg_ocn_init_61=0
+bg_ocn_init_62=0
+bg_ocn_init_63=0
+bg_ocn_init_64=0
 # *******************************************************************
 
 # *******************************************************************
